estruturas e listas aula 1 vidafullstack

--- a/index.html
+++ b/index.html
@@ -1,44 +1,125 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+<!--Define a linguagem do website para a Lingua Portuguesa-->
 
 <head>
     <meta charset="UTF-8">
+    <!--Meta para definir UTF-8, que reconhece caracteres da Lingua Portuguesa.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manga Site Name</title>
+    <!--Meta para definir a largura da página.-->
+    <title>Jogando o Machado</title>
+    <meta name="description" content="Portfólio profissional ALPHA - José Lucas">
+    <!--Meta que define a descrição do website-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <!--Insere o arquivo CSS do Bootstrap-->
     <link rel="stylesheet" href="styles.css">
+    <!--Insere o arquivo CSS pessoal-->
 </head>
 
 <body>
-    <section class="navBar">
-        <div class="upperNav">
-            <a class="pageLogo" href="index.html" title="Home" >
-                <img class="logoImgNavBar" src="https://img.icons8.com/external-sbts2018-outline-color-sbts2018/512w/external-ico-basic-ui-elements-2.4-sbts2018-outline-color-sbts2018.png">
-            </a>
-        </div>
-        <div class="lowerNav">
-            <nav class="ln-navBar">
-                
-            </nav>
-        </div>
-    </section>
+    <h1>Jogando o Machado - Portfólio de José Lucas</h1> <!--Título principal da sua página. Importante para SEO-->
+    <h2><strong>Início</strong></h2>
+    <br> <!--Quebra de linha-->
+    <h3><b>Projetos</b></h2>
+        <h4>Projeto: C</h4>
+        <dl>
+            <dt>Progresso:</dt>
+            <dd><mark>Iniciante</mark></dd>
+            <dt><b>Instituições de Ensino:</b></dt>
+            <ol>
+                <li>W3School.com - C</li>
+            </ol>
+            <dt><b>Etapas:</b></dt>
+            <ol>
+                <li>
+                    <i>Sintaxe Básica</i>
+                </li>
+            </ol>
+        </dl>
+        <br>
 
-    </div>
-    <h1 class="homepagetitle">Homepage</h1>
-    <p>News</p>
-    <p>Most Accessed</p>
-    <h2>Manga X</h2>
-    <p>Manga </p>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-        crossorigin="anonymous"></script>
-    <script>
-        src = "scripts.js"
-    </script>
+        <h4>Projeto: Front-End</h4>
+        <dl>
+            <dt>Progresso:</dt>
+            <dd><mark>Iniciante</mark></dd>
+            <dt><b>Instituições de Ensino:</b></dt>
+            <ol>
+                <li>VidaFullstack.Academy</li>
+                <li>W3School.com</li>
+            </ol>
+            <dt><b>Etapas:</b></dt>
+            <ol>
+                <li><i>Sintaxe Básica (HTML e CSS)</i></li>
+            </ol>
+        </dl>
+        <br>
+
+        <h4>Projeto C#</h4>
+        <dl>
+            <dt>Progresso:</dt>
+            <dd><mark>Intermediário</mark></dd>
+            <dt><b>Instituições de Ensino:</b></dt>
+            <ol>
+                <li></li>
+            </ol>
+        </dL>
+        <ol>
+            <li><i>Sintaxe Intermediária.</i>
+            <li><s>Sintaxe Básica.</s></li>
+        </ol> <!--Define lista ordenada-->
+        <br>
+
+        <h4>Projeto Java</h4>
+        <dl>
+            <dt>Progresso:</dt>
+            <dd><mark>Iniciante</mark></dd>
+        </dl>
+        <ol>
+            <li><i>Sintaxe Básica</i></li>
+        </ol>
+        <br>
+
+        <h4>Projeto Graduação em Engenharia de Software</h4>
+        <dl>
+            <dt>Progresso:</dt>
+            <dd><mark>3º Semestre (Cursando)</mark></dd>
+        </dl>
+        <ol>
+            <li>Programação Front-End I</li>
+            <li>Estrutura de Dados I</li>
+            <li>Materias Passadas:
+                <ol>
+                    <li>Análise e Projeto Orientado a Objetos</li>
+                    <li>Mentalidade Criativa e Empreendedora</li>
+                    <li>Linguagem e Técnicas de Programação</li>
+                    <li>Algoritmos e Lógica de Programação</li>
+                    <li>Produção do Conhecimento Científico, Tecnológico e Disrupção</li>
+                    <li>Engenharia de Software</li>
+                    <li>Matemática Aplicada à Computação</li>
+                    <li>Projeto de Vida GO</li>
+                    <li>redes de Computadores</li>
+                    <li>Fundamentos e Arquitetura de Computadores</li>
+                </ol>
+            </li>
+        </ol>
+        <!--A tag <b> é menos forte que <strong>-->
+        <!--A tag <u> é menos forte que a <ins>-->
+        <h3><b>Histórico Escolar</b></h3>
+        <h3><b>Currículo</b></h3>
+        <h3><b>Contato</b></h3>
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
+            integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
+            crossorigin="anonymous"></script>
+        <!--Insere Scripts do Bootstrap-->
+        <script>
+            src = "scripts.js"
+            <!--Insere scripts pessoais-->
+        </script>
 </body>
 
 </html>
