--- a/index.html
+++ b/index.html
@@ -22,93 +22,16 @@
     <h2><strong>Início</strong></h2>
     <br> <!--Quebra de linha-->
     <h3><b>Projetos</b></h2>
-        <h4>Projeto: C</h4>
-        <dl>
-            <dt>Progresso:</dt>
-            <dd><mark>Iniciante</mark></dd>
-            <dt><b>Instituições de Ensino:</b></dt>
-            <ol>
-                <li>W3School.com - C</li>
-            </ol>
-            <dt><b>Etapas:</b></dt>
-            <ol>
-                <li>
-                    <i>Sintaxe Básica</i>
-                </li>
-            </ol>
-        </dl>
-        <br>
-
-        <h4>Projeto: Front-End</h4>
-        <dl>
-            <dt>Progresso:</dt>
-            <dd><mark>Iniciante</mark></dd>
-            <dt><b>Instituições de Ensino:</b></dt>
-            <ol>
-                <li>VidaFullstack.Academy</li>
-                <li>W3School.com</li>
-            </ol>
-            <dt><b>Etapas:</b></dt>
-            <ol>
-                <li><i>Sintaxe Básica (HTML e CSS)</i></li>
-            </ol>
-        </dl>
-        <br>
-
-        <h4>Projeto C#</h4>
-        <dl>
-            <dt>Progresso:</dt>
-            <dd><mark>Intermediário</mark></dd>
-            <dt><b>Instituições de Ensino:</b></dt>
-            <ol>
-                <li></li>
-            </ol>
-        </dL>
-        <ol>
-            <li><i>Sintaxe Intermediária.</i>
-            <li><s>Sintaxe Básica.</s></li>
-        </ol> <!--Define lista ordenada-->
-        <br>
-
-        <h4>Projeto Java</h4>
-        <dl>
-            <dt>Progresso:</dt>
-            <dd><mark>Iniciante</mark></dd>
-        </dl>
-        <ol>
-            <li><i>Sintaxe Básica</i></li>
-        </ol>
-        <br>
-
-        <h4>Projeto Graduação em Engenharia de Software</h4>
-        <dl>
-            <dt>Progresso:</dt>
-            <dd><mark>3º Semestre (Cursando)</mark></dd>
-        </dl>
-        <ol>
-            <li>Programação Front-End I</li>
-            <li>Estrutura de Dados I</li>
-            <li>Materias Passadas:
-                <ol>
-                    <li>Análise e Projeto Orientado a Objetos</li>
-                    <li>Mentalidade Criativa e Empreendedora</li>
-                    <li>Linguagem e Técnicas de Programação</li>
-                    <li>Algoritmos e Lógica de Programação</li>
-                    <li>Produção do Conhecimento Científico, Tecnológico e Disrupção</li>
-                    <li>Engenharia de Software</li>
-                    <li>Matemática Aplicada à Computação</li>
-                    <li>Projeto de Vida GO</li>
-                    <li>redes de Computadores</li>
-                    <li>Fundamentos e Arquitetura de Computadores</li>
-                </ol>
-            </li>
-        </ol>
+        <a href="projetoc.html">Projeto: C</a><br>
+        <a href="projetofrontend.html">Projeto: Front-End</a><br>
+        <a href="projetoCsharp.html">Projeto: C#</a><br>
+        <a href="projetoJava.html">Projeto: Java</a><br>
+        <a href="projetoUni.html">Projeto: Graduação em Engenharia de Software</a><br>
         <!--A tag <b> é menos forte que <strong>-->
         <!--A tag <u> é menos forte que a <ins>-->
-        <h3><b>Histórico Escolar</b></h3>
+        <h3><b><a href="historicoescolar.html">Histórico Escolar</a></b></h3>
         <h3><b>Currículo</b></h3>
-        <h3><b>Contato</b></h3>
-
+        <h3><b><a href="formulariocontato.html">Contato</a></b></h3>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
             crossorigin="anonymous"></script>
