--- a/contato.html
+++ b/contato.html
@@ -31,20 +31,11 @@
     </nav>
     <br> <!--Quebra de linha-->
     <main>
-        <h4>Projeto C#</h4>
-        <dl>
-            <dt>Progresso:</dt>
-            <dd><mark>Intermediário</mark></dd>
-            <dt><b>Instituições de Ensino:</b></dt>
-            <ol>
-                <li></li>
-            </ol>
-        </dL>
-        <ol>
-            <li><i>Sintaxe Intermediária.</i>
-            <li><s>Sintaxe Básica.</s></li>
-        </ol> <!--Define lista ordenada-->
-        <br>
+        <h2>Entre em contato!</h2>
+        <h5>Email:</h3>
+        <p>jlucascaraujo@gmail.com</p>
+        <h5>Outras:</h5>
+        <p>https://linktr.ee/jlucascaraujo</p>
     </main>
     <br>
     <footer>
