--- a/projetofrontend.html
+++ b/projetofrontend.html
@@ -1,4 +1,37 @@
-<h4>Projeto: Front-End</h4>
+<!DOCTYPE html>
+<html lang="pt-br">
+<!--Define a linguagem do website para a Lingua Portuguesa-->
+
+<head>
+    <meta charset="UTF-8">
+    <!--Meta para definir UTF-8, que reconhece caracteres da Lingua Portuguesa.-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta para definir a largura da página.-->
+    <title>Jogando o Machado</title>
+    <meta name="description" content="Portfólio profissional ALPHA - José Lucas">
+    <!--Meta que define a descrição do website-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <!--Insere o arquivo CSS do Bootstrap-->
+    <link rel="stylesheet" href="styles.css">
+    <!--Insere o arquivo CSS pessoal-->
+</head>
+
+<body>
+    <header>
+        <h1>Jogando o Machado - Portfólio de José Lucas</h1> <!--Título principal da sua página. Importante para SEO-->
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="projetos.html">Projetos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+        <h2><strong>Início</strong></h2>
+    </nav>
+    <br> <!--Quebra de linha-->
+    <main>
+        <h4>Projeto: Front-End</h4>
         <dl>
             <dt>Progresso:</dt>
             <dd><mark>Iniciante</mark></dd>
@@ -13,3 +46,23 @@
             </ol>
         </dl>
         <br>
+    </main>
+    <br>
+    <footer>
+        <h3><b><a href="contato.html">Contato</a></b></h3>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
+        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
+        crossorigin="anonymous"></script>
+    <!--Insere Scripts do Bootstrap-->
+    <script>
+        src = "scripts.js"
+        <!--Insere scripts pessoais-->
+    </script>
+</body>
+
+</html>
