--- a/index.html
+++ b/index.html
@@ -13,36 +13,42 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!--Insere o arquivo CSS do Bootstrap-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!--Inserindo origem de fontes da google-->
     <link rel="stylesheet" href="styles.css">
     <!--Insere o arquivo CSS pessoal-->
     <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
+    <!--Components JS para Header e Footer, talvez Aside depois-->
 </head>
 
 <body>
     <header-component></header-component>
-    <br> <!--Quebra de linha-->
-    <main>
-        <session>
-            <h2><b>Projetos</b></h2>
-            <a href="projetoc.html">Projeto: C</a><br>
-            <a href="projetofrontend.html">Projeto: Front-End</a><br>
-            <a href="projetoCsharp.html">Projeto: C#</a><br>
-            <a href="projetoJava.html">Projeto: Java</a><br>
-            <a href="projetoUni.html">Projeto: Graduação em Engenharia de Software</a><br>
-        </session>
+    <div class="wrapper">
+        <br> <!--Quebra de linha-->
+        <main>
+            <session>
+                <h2><b>Projetos</b></h2>
+                <a href="projetoc.html">Projeto: C</a><br>
+                <a href="projetofrontend.html">Projeto: Front-End</a><br>
+                <a href="projetoCsharp.html">Projeto: C#</a><br>
+                <a href="projetoJava.html">Projeto: Java</a><br>
+                <a href="projetoUni.html">Projeto: Graduação em Engenharia de Software</a><br>
+            </session>
+            <br>
+            <session>
+                <!--A tag <b> é menos forte que <strong>-->
+                <!--A tag <u> é menos forte que a <ins>-->
+                <h3><b><a href="historicoescolar.html">Histórico Escolar</a></b></h3>
+                <h3><b>Currículo</b></h3>
+            </session>
+        </main>
         <br>
-        <session>
-            <!--A tag <b> é menos forte que <strong>-->
-            <!--A tag <u> é menos forte que a <ins>-->
-            <h3><b><a href="historicoescolar.html">Histórico Escolar</a></b></h3>
-            <h3><b>Currículo</b></h3>
-        </session>
-    </main>
-    <br>
-    <footer>
-        <h3><b><a href="contato.html">Contato</a></b></h3>
-    </footer>
-
+    </div>
+    <footer-component></footer-component>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
