--- a/index.html
+++ b/index.html
@@ -1,28 +1,12 @@
+---
+title: Home 
+---
 <!DOCTYPE html>
 <html lang="pt-br">
 <!--Define a linguagem do website para a Lingua Portuguesa-->
 
 <head>
-    <meta charset="UTF-8">
-    <!--Meta para definir UTF-8, que reconhece caracteres da Lingua Portuguesa.-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Meta para definir a largura da página.-->
-    <title>Jogando o Machado</title>
-    <meta name="description" content="Portfólio profissional ALPHA - José Lucas">
-    <!--Meta que define a descrição do website-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <!--Insere o arquivo CSS do Bootstrap-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <!--Inserindo origem de fontes da google-->
-    <link rel="stylesheet" href="styles.css">
-    <!--Insere o arquivo CSS pessoal-->
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
-    <!--Components JS para Header e Footer, talvez Aside depois-->
+    {% include head.html %}
 </head>
 
 <body>
