--- a/projetoJava.html
+++ b/projetoJava.html
@@ -3,24 +3,11 @@
 <!--Define a linguagem do website para a Lingua Portuguesa-->
 
 <head>
-    <meta charset="UTF-8">
-    <!--Meta para definir UTF-8, que reconhece caracteres da Lingua Portuguesa.-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Meta para definir a largura da página.-->
-    <title>Jogando o Machado</title>
-    <meta name="description" content="Portfólio profissional ALPHA - José Lucas">
-    <!--Meta que define a descrição do website-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <!--Insere o arquivo CSS do Bootstrap-->
-    <link rel="stylesheet" href="styles.css">
-    <!--Insere o arquivo CSS pessoal-->
+    {% include head.html %}
 </head>
 
 <body>
-    <header>
-        <h1>Jogando o Machado - Portfólio de José Lucas</h1> <!--Título principal da sua página. Importante para SEO-->
-    </header>
+    <header-component></header-component>
     <nav>
         <ul>
             <li><a href="index.html">Início</a></li>
