--- a/projetoCsharp.html
+++ b/projetoCsharp.html
@@ -1,3 +1,6 @@
+--- 
+title: Projeto C#
+---
 <!DOCTYPE html>
 <html lang="pt-br">
 <!--Define a linguagem do website para a Lingua Portuguesa-->
@@ -34,9 +37,7 @@
         <br>
     </main>
     <br>
-    <footer>
-        <h3><b><a href="contato.html">Contato</a></b></h3>
-    </footer>
+    <footer-component></footer-component>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
