--- a/projetos.html
+++ b/projetos.html
@@ -1,3 +1,6 @@
+--- 
+title: Projetos
+---
 <!DOCTYPE html>
 <html lang="pt-br">
 <!--Define a linguagem do website para a Lingua Portuguesa-->
@@ -7,4 +10,5 @@
 </head>
 <body>
     <header-component></header-component>
+    <footer-component></footer-component>
 </body>
