--- a/contato.html
+++ b/contato.html
@@ -1,7 +1,9 @@
+--- 
+title: Contato
+---
 <!DOCTYPE html>
 <html lang="pt-br">
 <!--Define a linguagem do website para a Lingua Portuguesa-->
-
 <head>
     {% include head.html %}
 </head>
@@ -25,9 +27,7 @@
         <p>https://linktr.ee/jlucascaraujo</p>
     </main>
     <br>
-    <footer>
-        <h3><b><a href="contato.html">Contato</a></b></h3>
-    </footer>
+    <footer-component></footer-component>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
