--- a/historicoescolar.html
+++ b/historicoescolar.html
@@ -1,7 +1,6 @@
 --- 
 title: Histórico Escolar
 ---
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <!--Define a linguagem do website para a Lingua Portuguesa-->
@@ -119,9 +118,7 @@ title: Histórico Escolar
 </table>
     </main>
     <br>
-    <footer>
-        <h3><b><a href="contato.html">Contato</a></b></h3>
-    </footer>
+    <footer-component></footer-component>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
