--- a/projetos.html
+++ b/projetos.html
@@ -9,6 +9,6 @@ title: Projetos
     {% include head.html %}
 </head>
 <body>
-    <header-component></header-component>
-    <footer-component></footer-component>
+    {% include header.html %}
+    {% include footer.html %}
 </body>
