--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
     <div class="wrapper">
         <br> <!--Quebra de linha-->
         <main>
-            <session>
+            <session id="mainPage">
                 <div id="msgInicial">
                     <ul id="textMsgInicial">
                         <li>Olá,</li>
@@ -22,6 +22,11 @@ title: Home
                         <li>um Engenheiro de Software.</li>
                         <li><a id="botaoContato" href="contato.html">Vamos entrar em contato!</a></li>
                     </ul>
+                </div>
+                <div id="textoSecundario">
+                    <p class="textoStatusAtual">Relativamente iniciante na área de Engenharia de Software,</p>
+                    <p class="textoStatusAtual">estudando, atualmente, C e Front-End.</p>
+                    <p class="textoStatusAtual">Principalmente cursando Engenharia de Software pela UniCesumar</p>
                 </div>
             </session>
         </main>
