--- a/projetos.html
+++ b/projetos.html
@@ -1,4 +1,4 @@
---- 
+---
 title: Projetos
 ---
 <!DOCTYPE html>
@@ -8,7 +8,22 @@ title: Projetos
 <head>
     {% include head.html %}
 </head>
+
 <body>
     {% include header.html %}
+    <div class="wrapper">
+    <session id="projetosMainBody">
+        <h2 id="tituloProjetos">Projetos Atuais</h2>
+        <p>Atualmente estou aperfeiçoando minhas habilidades.</p>
+        <ul id="listaProjetos">
+            <li><a href="projetoUni.html">Projeto Graduação em Engenharia de Software</a>: UniCesumar</li>
+            <li><a href="projetoc.html">Projeto C</a>: UniCesumar, W3School, YouTube e EdX</li>
+            <li><a href="projetofrontend.html">Projeto Front-End</a>: VidaFullstack, W3School e YouTube</li>
+            <li><a href="projetoCsharp.html">Projeto C#</a>: Udemy, W3School e YouTube</li>
+            <li><a href="projetoJava.html">Projeto Java</a>: Dio.Me, W3School e YouTube</li>
+            <li><a href="projetosArquivados.html">Projetos Arquivados</a></li>
+        </ul>
+    </session>
+    </div>
     {% include footer.html %}
 </body>
