--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@ title: Home
                     </ul>
                 </div>
                 <div id="textoSecundario">
-                    <p class="textoStatusAtual">Relativamente iniciante na área de Engenharia de Software,</p>
-                    <p class="textoStatusAtual">estudando, atualmente, C e Front-End.</p>
-                    <p class="textoStatusAtual">Principalmente cursando Engenharia de Software pela UniCesumar</p>
+                    <p class="textoStatusAtual">Relativamente iniciante na área de Engenharia de Software, estudando, atualmente, C e Front-End. Principalmente cursando Engenharia de Software pela UniCesumar</p>
                 </div>
             </session>
         </main>
