--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@ title: Home
                     </ul>
                 </div>
                 <div id="textoSecundario">
-                    <p class="textoStatusAtual">Relativamente iniciante na área de Engenharia de Software, estudando, atualmente, C e Front-End. Principalmente cursando Engenharia de Software pela UniCesumar</p>
+                    <noscript>
+                        <h2>Relativamente iniciante na área de Engenharia de Software, estudando, atualmente, C e Front-End. Principalmente cursando Engenharia de Software pela UniCesumar</h2>
+                    </noscript>
+                    <h2 class="textoStatusAtual"></h2>
                 </div>
             </session>
         </main>
