--- a/projetos.html
+++ b/projetos.html
@@ -22,6 +22,7 @@ title: Projetos
             <li><a href="projetoCsharp.html">Projeto C#</a>: Udemy, W3School e YouTube</li>
             <li><a href="projetoJava.html">Projeto Java</a>: Dio.Me, W3School e YouTube</li>
             <li><a href="projetosArquivados.html">Projetos Arquivados</a></li>
+            <li><a href="historicoescolar.html">Histórico Escolar</a></li>
         </ul>
     </session>
     </div>
