--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: Home
 <html lang="pt-br">
 <!--Define a linguagem do website para a Lingua Portuguesa-->
 
-<head>
+<head> <!--Head incluida através do Jekyll-->
     {% include head.html %}
 </head>
 
-<body>
+<body> <!--Header incluso através do Jekyll-->
     {% include header.html %}
     <div class="wrapper">
         <br> <!--Quebra de linha-->
@@ -18,13 +18,13 @@ title: Home
                 <div id="msgInicial">
                     <ul id="textMsgInicial">
                         <li>Olá,</li>
-                        <li>Eu sou <span style="color: #BF281B;">José Lucas</span></li>
+                        <li>Eu sou <span style="color: #BF281B;">José Lucas</span></li> 
                         <li>um Engenheiro de Software.</li>
                         <li><a id="botaoContato" href="contato.html">Vamos entrar em contato!</a></li>
                     </ul>
                 </div>
                 <div id="textoSecundario">
-                    <noscript>
+                    <noscript> <!--Efeito de digitação usando o jQuery-->
                         <h2>Relativamente iniciante na área de Engenharia de Software, estudando, atualmente, C e Front-End. Principalmente cursando Engenharia de Software pela UniCesumar</h2>
                     </noscript>
                     <h2 class="textoStatusAtual"></h2>
@@ -33,7 +33,7 @@ title: Home
         </main>
         <br>
     </div>
-    {% include footer.html %}
+    {% include footer.html %} <!--Footer inserido pelo Jekyll-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
