--- a/projetofrontend.html
+++ b/projetofrontend.html
@@ -1,27 +1,20 @@
---- 
+---
 title: Projeto Front-End
 ---
 <!DOCTYPE html>
 <html lang="pt-br">
-<!--Define a linguagem do website para a Lingua Portuguesa-->
-
 <head>
     {% include head.html %}
 </head>
-
 <body>
-    <header-component></header-component>
-    <nav>
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="projetos.html">Projetos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
-        <h2><strong>Início</strong></h2>
-    </nav>
-    <br> <!--Quebra de linha-->
+    {% include header.html %}
     <main>
-        <h4>Projeto: Front-End</h4>
+        <h1>Projeto: Front-End</h1>
+        <h2>Test Title</h2>
+        <h3>Head 3</h3>
+        <h4>Head 4</h4>
+        <h5>Head 5</h5>
+        <h6>Head 6</h6>
         <dl>
             <dt>Progresso:</dt>
             <dd><mark>Iniciante</mark></dd>
@@ -38,7 +31,7 @@ title: Projeto Front-End
         <br>
     </main>
     <br>
-    <footer-component></footer-component>
+    {% include footer.html %}
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
