--- a/historicoescolar.html
+++ b/historicoescolar.html
@@ -10,16 +10,7 @@ title: Histórico Escolar
 </head>
 
 <body>
-    <header-component></header-component>
-    <nav>
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="projetos.html">Projetos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
-        <h2><strong>Início</strong></h2>
-    </nav>
-    <br> <!--Quebra de linha-->
+    {% include header.html %}
     <main>
 <table border="1">
     <caption>
@@ -117,8 +108,7 @@ title: Histórico Escolar
     </thead>
 </table>
     </main>
-    <br>
-    <footer-component></footer-component>
+    {% include footer.html %}
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
