--- a/projetofrontend.html
+++ b/projetofrontend.html
@@ -9,26 +9,36 @@ title: Projeto Front-End
 <body>
     {% include header.html %}
     <main>
-        <h1>Projeto: Front-End</h1>
-        <h2>Test Title</h2>
-        <h3>Head 3</h3>
-        <h4>Head 4</h4>
-        <h5>Head 5</h5>
-        <h6>Head 6</h6>
-        <dl>
-            <dt>Progresso:</dt>
-            <dd><mark>Iniciante</mark></dd>
-            <dt><b>Instituições de Ensino:</b></dt>
-            <ol>
-                <li>VidaFullstack.Academy</li>
-                <li>W3School.com</li>
-            </ol>
-            <dt><b>Etapas:</b></dt>
-            <ol>
-                <li><i>Sintaxe Básica (HTML e CSS)</i></li>
-            </ol>
-        </dl>
-        <br>
+        <div class="wrapper">
+            <article id="progressoAreaFE">
+                <h1>Progresso em Front End</h1>
+                <h2>Iniciante</h2>
+                <h3>Descrição</h3>
+                <p>Ainda preciso aprender JavaScript e realmente aprender CSS Grid e Flex.</p>
+                <h3>Lista de Estudos Futuros:</h3>
+                <ul>
+                    <li>@media</li>
+                    <li>API em Front-End</li>
+                    <li>Acessibilidade</li>
+                    <li>Teste de performace</li>
+                    <li>React</li>
+                    <li>Typescript</li>
+                </ul>
+            </article>
+            <article id="projectFE1">
+                <h1>Projeto Portfólio</h1>
+                <h2>Etapa: Versão 2.0</h2>
+                <h3>Descrição</h3>
+                <p>A primeira versão desse site foi desenvolvida no básico de HTML, CSS e JavaScript com uma ou outra animação em jQuery. Entretanto, também peguei vantagem do GitHub pages e inseri o Jekyll e suas ferramentas nesse projeto.</p>
+                <h3>Resumo do aprendido:</h3>
+                <ul>
+                    <li>Como instalar ruby.</li>
+                    <li>Como publicar uma página no GitHub Pages</li>
+                    <li>Como definir um domínio próprio no GitHubPages</li>
+                    <li>Como reutilizar um template html ao inves de repetir o mesmo head, header e footer em cada sub página usando Jekyll.</li>
+                </ul>
+            </article>
+        </div>
     </main>
     <br>
     {% include footer.html %}
@@ -39,7 +49,6 @@ title: Projeto Front-End
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
         integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
         crossorigin="anonymous"></script>
-    <!--Insere Scripts do Bootstrap-->
     <script>
         src = "scripts.js"
         <!--Insere scripts pessoais-->
