--- a/estudos.html
+++ b/estudos.html
@@ -1,9 +1,8 @@
 ---
-title: Projetos
+title: Estudos
 ---
 <!DOCTYPE html>
 <html lang="pt-br">
-<!--Define a linguagem do website para a Lingua Portuguesa-->
 
 <head>
     {% include head.html %}
