--- a/uni.html
+++ b/uni.html
@@ -13,13 +13,7 @@ title: Projeto Graduação em Eng. Software.
     <main id="uniPage">
         <h1>Projeto Graduação em Engenharia de Software</h1>
         <h5>Progresso: 3º Semestre Cursando</h5>
-        <h4>Programação Front-End</h4>
-        <h5>Atividade 1: Inserindo textos através do JS</h5>
-        <p>Resultado:</p>
-        <div class="caixaResultado">
-            <p id="enunciado"></p>
-        </div>
-        <h5>Atividade 2:</h5>
+        <h4 class="uniLinks"><a href="uniProgramacaoFrontEnd.html">Programação Front-End</a></h4>
     </main>
     {% include footer.html %}
 
