--- a/Java.html
+++ b/Java.html
@@ -1,16 +1,15 @@
---- 
+---
 title: Projeto Java
 ---
 <!DOCTYPE html>
 <html lang="pt-br">
-<!--Define a linguagem do website para a Lingua Portuguesa-->
 
 <head>
     {% include head.html %}
 </head>
 
 <body>
-    <header-component></header-component>
+    {% include header.html %}
     <nav>
         <ul>
             <li><a href="index.html">Início</a></li>
@@ -31,18 +30,9 @@ title: Projeto Java
             <li><i>Sintaxe Básica</i></li>
         </ol>
         <br>
-
     </main>
-    <br>
-    <footer-component></footer-component>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-        crossorigin="anonymous"></script>
-    <!--Insere Scripts do Bootstrap-->
+    {% include footer.html %}
     <script>
         src = "scripts.js"
         <!--Insere scripts pessoais-->
