--- a/c.html
+++ b/c.html
@@ -1,53 +1,27 @@
---- 
+---
 title: Projeto C
 ---
 <!DOCTYPE html>
 <html lang="pt-br">
-<!--Define a linguagem do website para a Lingua Portuguesa-->
 
 <head>
     {% include head.html %}
 </head>
 
 <body>
-    <header-component></header-component>
-    <nav>
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="projetos.html">Projetos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
-        <h2><strong>Início</strong></h2>
-    </nav>
-    <br> <!--Quebra de linha-->
+    {% include header.html %}
     <main>
-        <h4>Projeto: C</h4>
-        <dl>
-            <dt>Progresso:</dt>
-            <dd><mark>Iniciante</mark></dd>
-            <dt><b>Instituições de Ensino:</b></dt>
-            <ol>
-                <li>W3School.com - C</li>
-            </ol>
-            <dt><b>Etapas:</b></dt>
-            <ol>
-                <li>
-                    <i>Sintaxe Básica</i>
-                </li>
-            </ol>
-        </dl>
-        <br>
+        <h1>Linguagem C, Projetos</h1>
+        <section>
+            <article id="article2" class="articles">
+                <h5>Estrutura de Dados: Fila</h5>
+            </article>
+            <article id="article1" class="articles">
+                <h5>Calculadora Simples em C</h5>
+            </article>
+        </section>
     </main>
-    <br>
-    <footer-component></footer-component>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-        crossorigin="anonymous"></script>
-    <!--Insere Scripts do Bootstrap-->
+    {% include footer.html %}
     <script>
         src = "scripts.js"
         <!--Insere scripts pessoais-->
