--- a/estudos.html
+++ b/estudos.html
@@ -11,7 +11,7 @@ title: Estudos
 <body>
     {% include header.html %}
     <div class="wrapper">
-    <session id="projetosMainBody">
+    <section id="projetosMainBody">
         <h1 id="tituloProjetos"></h2>
         <p>Atualmente estou aperfeiçoando minhas habilidades nas seguintes competências técnicas:</p>
         <ul id="listaProjetos">
@@ -21,7 +21,7 @@ title: Estudos
             <li><a href="Csharp.html">C#</a></li>
             <li><a href="Java.html">Java</a></li>
         </ul>
-    </session>
+    </section>
     </div>
     {% include footer.html %}
 </body>
