--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ title: Home
     {% include header.html %}
     <div class="wrapper">
         <main id="mainPage">
-            <session id="mensagensPgMain">
+            <section id="mensagensPgMain">
                 <h2 id="textMsgInicial">Olá, sou <span id="nomeDestaque">José Lucas</span>, focado em Front-End,
-                    aspirante a FullStack.</h1>
+                    aspirante a FullStack.</h2>
                     <div id="textoSecundario">
                         <noscript>
                             <p>Estou me formando em Engenharia de Software e estudando programação pela Udemy, Dio.me e
@@ -22,8 +22,8 @@ title: Home
                         </noscript>
                         <p class="textoStatusAtual"></p>
                     </div>
-            </session>
-            <session id="technicalKnowHowIcons">
+            </section>
+            <section id="technicalKnowHowIcons">
                 <img
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg" />
@@ -32,15 +32,11 @@ title: Home
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/c/c-original.svg" />
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg" />
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original-wordmark.svg" />
-            </session>
+            </section>
         </main>
         <br>
     </div>
     {% include footer.html %} <!--Footer inserido pelo Jekyll-->
-    <script>
-        src = "scripts.js"
-        <!--Insere scripts pessoais-->
-    </script>
 </body>
 
 </html>
