09072025 ON lptp cmt 1

--- a/c.html
+++ b/c.html
@@ -14,6 +14,28 @@ title: Projeto C
         <h1>Linguagem C, Projetos</h1>
         <div class="expandable">
             <div class="expandable__title-bar">
+                <span class="expandable__title">Matriz simples</span>
+                <ion-icon class="expandable__icon" name="chevron-back"></ion-icon>
+            </div>
+            <div class="expandable__content-wrapper">
+                <div class="expandable__content">
+                    <script src="//onlinegdb.com/embed/js/8vS1k8rMH?theme=dark"></script>
+                </div>
+            </div>
+        </div>
+        <div class="expandable">
+            <div class="expandable__title-bar">
+                <span class="expandable__title">Vetor lados de um objeto geometrico</span>
+                <ion-icon class="expandable__icon" name="chevron-back"></ion-icon>
+            </div>
+            <div class="expandable__content-wrapper">
+                <div class="expandable__content">
+                    <script src="//onlinegdb.com/embed/js/4AufYXy1w?theme=dark"></script>
+                </div>
+            </div>
+        </div>
+        <div class="expandable">
+            <div class="expandable__title-bar">
                 <span class="expandable__title">Criar Vetor e Imprimir o Resultado</span>
                 <ion-icon class="expandable__icon" name="chevron-back"></ion-icon>
             </div>
@@ -23,6 +45,7 @@ title: Projeto C
                 </div>
             </div>
         </div>
+
     </main>
     {% include footer.html %}
 </body>
