09072025 ON lptp cmt 2

--- a/c.html
+++ b/c.html
@@ -14,6 +14,17 @@ title: Projeto C
         <h1>Linguagem C, Projetos</h1>
         <div class="expandable">
             <div class="expandable__title-bar">
+                <span class="expandable__title">Matriz dinamica</span>
+                <ion-icon class="expandable__icon" name="chevron-back"></ion-icon>
+            </div>
+            <div class="expandable__content-wrapper">
+                <div class="expandable__content">
+                    <script src="//onlinegdb.com/embed/js/TvTEAEdbY?theme=dark"></script>
+                </div>
+            </div>
+        </div>
+        <div class="expandable">
+            <div class="expandable__title-bar">
                 <span class="expandable__title">Matriz simples</span>
                 <ion-icon class="expandable__icon" name="chevron-back"></ion-icon>
             </div>
